--- a/css/styles.css
+++ b/css/styles.css
@@ -3,26 +3,25 @@ body {
 }
 
 #header {
-  width:100vh;
+  width:100vw;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
 h1#headtext {
- font: 2em "Futura", sans-serif;
+ font: 6vw "Futura", sans-serif;
  text-align: center;
  border: none;
 }
 
 div#links a {
-  font: 1em "Futura", sans-serif;
+  font: 2.2vw "Futura", sans-serif;
   color: black;
   text-decoration : none;
 }
 
 div#links {
-  width:100vh;
   margin-left: auto;
   margin-right: auto;
   display: block;
