--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom:1em;
 }
 
 h1#headtext {
@@ -26,4 +27,36 @@ div#links {
   margin-right: auto;
   display: block;
   text-align: center;
+}
+
+section#about.slide {
+  background-color: #00b5ec;
+}
+
+section#about p {
+  font: 2.2vw "Futura", sans-serif;
+  color: black;
+  text-align:center;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+section#sounds.slide {
+  background-color: orange;
+}
+section#cooking.slide {
+  background-color: green;
+}
+section#fitness.slide {
+  background-color: yellow;
+}
+
+.slide {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  position: relative;
+  width:100vw;
+  height:30em;
 }
