--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,23 @@ body {
 
 #header {
   width:100vw;
+  height:100vh;
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-bottom:1em;
+}
+
+button.scroll {
+    background: url("../assets/scroll_down.svg");
+    border: none;
+    display: block;
+    left:50%;
+    margin-left: auto;
+    position: absolute;
+    bottom: 0;
+    width:8em;
+    height:10em
 }
 
 h1#headtext {
